# chatlearning

./: .env.example  .gitignore  README.md  pyproject.toml
db/: 001_pgvector_schema.sql
docs/: phase-2-rag-service-plan.md
docs/superpowers/plans/: 2026-06-09-ai-workflow-atlas.md  2026-06-09-real-rag-trace-v2.md  2026-06-10-structured-hybrid-rag-plan.md  2026-06-11-policy-clause-group-chunking.md  2026-06-15-knowledge-base-rag-generalization.md
docs/superpowers/specs/: 2026-06-15-knowledge-base-rag-generalization-design.md
infra/langfuse/: .env.example  README.md  docker-compose.yml
src/enterprise_rag_mvp/: answer_planner.py  bad_cases.py  cli.py  company_importer.py  embedding_client.py  evaluation.py  evidence_validator.py  langfuse_tracing.py  management.py  models.py  pgvector_store.py  policy_glossary.py  policy_rule_resolver.py  query_intent.py  regression_cases.py  render.py  reranker_client.py  samples.py  trace_pipeline.py  web_app.py  yungu_importer.py
src/enterprise_rag_mvp/document_chunking/: __init__.py  models.py  policy_chunker.py
tests/: test_answer_planner.py  test_bad_cases.py  test_company_importer.py  test_document_chunking.py  test_document_parsing.py  test_evaluation.py  test_evidence_validator.py  test_langfuse_tracing.py  test_mvp.py  test_policy_glossary.py  test_policy_rule_resolver.py  test_policy_structure_chunk_builder.py  test_policy_structure_parser.py  test_query_intent.py  test_regression_cases.py  test_reranker_client.py  test_trace_pipeline.py  test_trace_ui_static.py  test_web_app.py  test_yungu_importer.py
(+18 files in other folders)
