[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-backend"
version = "0.1.0"
description = "Minimal RAG backend MVP for enterprise policy search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.35.0",
]

[project.scripts]
enterprise-rag-mvp = "enterprise_rag_mvp.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enterprise_rag_mvp = ["web/*"]
